Use Qpid project's fedore packages for building Docker image.
Signed-off-by: Kai Hudalla <kai.hudalla@bosch-si.com>

--- a/dispatchrouter/Dockerfile
+++ b/dispatchrouter/Dockerfile
@@ -1,10 +1,9 @@
 FROM fedora:latest
 
 # installing needed libraries (i.e. for SASL, SSL/TLS, Python, ...)
-RUN dnf -y install cyrus-sasl-lib cyrus-sasl-plain libuuid openssl python cyrus-sasl-sql && dnf -y update && dnf clean all
-
-# adding binaries for the Qpid Proton and Qpid Dispatch Router
-ADD qpid-proton-binary.tar.gz /
-ADD qpid-dispatch-binary.tar.gz /
+RUN dnf -y install cyrus-sasl-lib cyrus-sasl-plain cyrus-sasl-sql libuuid openssl python
+RUN dnf -y install qpid-proton-c qpid-dispatch-router qpid-dispatch-tools && \
+    dnf -y update && \
+    dnf clean all
 
 CMD ["bash"]
