--- a/adapters/http-vertx/pom.xml
+++ b/adapters/http-vertx/pom.xml
@@ -22,6 +22,10 @@
       <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.jaegertracing</groupId>
+      <artifactId>jaeger-core</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
