--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -37,6 +37,7 @@
     <guava.version>19.0</guava.version>
     <influxdb.version>1.2.4-alpine</influxdb.version>
     <jackson.version>2.9.0</jackson.version>
+    <jaeger.version>0.28.0</jaeger.version>
     <java-base-image.name>openjdk:8u162-jre-slim</java-base-image.name>
     <jjwt.version>0.7.0</jjwt.version>
     <jmeter.version>3.3</jmeter.version>
@@ -45,6 +46,8 @@
     <mockito.version>2.10.0</mockito.version>
     <netty.version>4.1.15.Final</netty.version>
     <objenesis.version>2.6</objenesis.version>
+    <opentracing.version>0.31.0</opentracing.version>
+    <opentracing-vertx-web.version>0.0.1</opentracing-vertx-web.version>
     <proton.version>0.25.0</proton.version>
     <qpid-jms.version>0.29.0</qpid-jms.version>
     <slf4j.version>1.7.24</slf4j.version>
@@ -322,6 +325,26 @@
             <artifactId>jackson-databind</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+      <dependency>
+       <groupId>io.opentracing.contrib</groupId>
+       <artifactId>opentracing-vertx-web</artifactId>
+       <version>${opentracing-vertx-web.version}</version>
+      </dependency>
+      <dependency>
+       <groupId>io.opentracing</groupId>
+       <artifactId>opentracing-api</artifactId>
+       <version>${opentracing.version}</version>
+      </dependency>
+      <dependency>
+       <groupId>io.opentracing</groupId>
+       <artifactId>opentracing-noop</artifactId>
+       <version>${opentracing.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.jaegertracing</groupId>
+        <artifactId>jaeger-core</artifactId>
+        <version>${jaeger.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
