--- a/client/pom.xml
+++ b/client/pom.xml
@@ -78,6 +78,10 @@
       <artifactId>vertx-codegen</artifactId>
       <classifier>processor</classifier>
     </dependency>
+    <dependency>
+     <groupId>io.opentracing</groupId>
+     <artifactId>opentracing-noop</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
