--- a/core/pom.xml
+++ b/core/pom.xml
@@ -67,6 +67,10 @@
       <version>${jackson.version}</version>
     </dependency>
     <dependency>
+     <groupId>io.opentracing</groupId>
+     <artifactId>opentracing-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.eclipse.hono</groupId>
       <artifactId>hono-demo-certs</artifactId>
     </dependency>
@@ -77,7 +81,6 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 
