--- a/client/pom.xml
+++ b/client/pom.xml
@@ -39,6 +39,10 @@
       <artifactId>vertx-proton</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-auth-common</artifactId>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
