[#1679] Add changes based on review comments.
Signed-off-by: Kartheeswaran Kalidass <kartheeswaran.kalidass@bosch.io>

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -196,6 +196,11 @@
       </dependency>
       <dependency>
         <groupId>org.eclipse.hono</groupId>
+        <artifactId>hono-service-device-registry-base</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.eclipse.hono</groupId>
         <artifactId>hono-core</artifactId>
         <version>${project.version}</version>
       </dependency>
