--- a/services/device-registry-file/pom.xml
+++ b/services/device-registry-file/pom.xml
@@ -92,6 +92,8 @@
                                                 <arg>-Dvertx.cacheDirBase=/tmp</arg>
                                                 <arg>-Dloader.home=/opt/hono</arg>
                                                 <arg>-Dloader.path=extensions</arg>
+                                                <arg>-Ddebug</arg>
+                                                <arg>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8000</arg>
                                                 <arg>-cp</arg>
                                                 <arg>/opt/hono/${project.artifactId}-${project.version}-${classifier.spring.boot.artifact}.jar</arg>
                                                 <arg>org.springframework.boot.loader.PropertiesLauncher</arg>
